sumo/tests/jtrrouter/errors/network/edge/lane/root__edge__lane#id__empty12/errors.jtrrouter
Error: Could not retrieve the id of a lane.
Quitting (on error).
